deployment-backend-ui-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ui-api-deployment
  labels:
    app: backend-ui-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-ui-api
  template:
    metadata:
      labels:
        app: backend-ui-api
    spec:
      containers:
        - name: backend-ui-api-container
          image: velipekkanurmi/press-the-button-backend-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 150Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend-ui-api
spec:
  type: NodePort
  selector:
    app: backend-ui-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
